--- a/LaTeX/sample.bib
+++ b/LaTeX/sample.bib
@@ -285,7 +285,12 @@
   year = {2015}
 }
 
-@
+@Misc{5DT,
+  title = {{Data Gloves | 5DT }},
+  howpublished = {\url{http://www.5dt.com/?page_id=34}},
+  urlcolor = black,
+  year = {2015}
+}
 
 @article{CC01a,
  author = {Chang, Chih-Chung and Lin, Chih-Jen},
